# ironRig

./: .gitignore  README.md  install.py  launch_ironrig_maya.py
RnD/: fan.mb  fan1.mb  quadroPedLeg.mb
assets/: abs_asset.ma  accumulateValue_asset.ma  angleToArc_asset.ma  arcToAngle_asset.ma  directionTwoVectors_asset.ma  footRoll_asset.ma  metahumanSDK_asset.ma  mirrorPlane_asset.ma  moveAngle_asset.ma  moveVector_asset.ma  poleVector_asset.ma  spaceSwitch_asset.ma  switchChoice.ma  vectorLength_asset.ma
config/: node_defaults.json
controllers/: ARKit_controller.ma  FACS_controller.mb  arrow.json  arrowCircle.json  arrowDual.json  arrowQuad.json  arrowRotate180.json  arrowRotate90.json  arrowRoundQuad.json  circle.json  cloth.json  cube.json  cylinder.json  eye.json  foot.json  gear.json  locator.json  metahuman_controller.mb  nail.json  pentagon.json  pin.json  pyramid.json  root.json  sphere.json  square.json  squareArc.json  triangle.json
docs/: GitHub - LEESANGTAK-ironRig.url  design_UI.ui  idea.excalidraw  ironRig - Trello.url  ironRig_Model.drawio  modelHierarchy.drawio  workflow.drawio  workflow.excalidraw
guides/: ARKit_facial.ma  curve.ma  facial.ma  point.ma  revFoot.ma  ribbon.ma
plug-ins/: multiRemapValue.py  orientPlane.py  takJigglePoint.py
resources/: metaHuman_eye_sampleMesh.ma  metaHuman_head_sampleMesh.ma  metaHuman_teeth_sampleMesh.ma  metaHuman_tongue_sampleMesh.ma
skeletons/: metahuman_teethTongue.ma
src/myPlugin/: CMakeLists.txt  build.bat  loadPlugin.py  unloadPlugin.py
test/: advancedSkel.ma  advancedSkel_build.py  bipedSkel.ma  (+16 more)
(+74 files in other folders)
